--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="./src/assets/ping-pong.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Pong</title>
+        <title>PONQ</title>
     </head>
     <body>
         <div id="root"></div>
+        <div class="space stars1"></div>
+        <div class="space stars2"></div>
+        <div class="space stars3"></div>
         <script type="module" src="/src/main.tsx"></script>
     </body>
 </html>
