--- a/index.html
+++ b/index.html
@@ -2,22 +2,25 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <link rel="icon"
-          type="image/svg+xml"
-          href="./src/assets/valuehero.png" />
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1.0" />
-    <title>#VALUEHERO</title>
+      <meta charset="UTF-8" />
+      <link rel="icon"
+            type="image/svg+xml"
+            href="./src/assets/valuehero.png" />
+      <meta name="viewport"
+            content="width=device-width, initial-scale=1.0" />
+      <link rel="manifest"
+            href="manifest.json" />
+
+      <title>#VALUEHERO</title>
 </head>
 
 <body>
-    <div id="root"></div>
-    <div class="space stars1"></div>
-    <div class="space stars2"></div>
-    <div class="space stars3"></div>
-    <script type="module"
-            src="/src/main.tsx"></script>
+      <div id="root"></div>
+      <div class="space stars1"></div>
+      <div class="space stars2"></div>
+      <div class="space stars3"></div>
+      <script type="module"
+              src="/src/main.tsx"></script>
 </body>
 
 </html>
