--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
       <div id="root"></div>
       <div class="space stars1"></div>
-      <div class="space stars2"></div>
+      <!-- <div class="space stars2"></div> -->
       <div class="space stars3"></div>
       <script type="module"
               src="/src/main.tsx"></script>
